# CMakeLibraryProject

./: .gitignore  CMakeLists.txt
include/: _CMakeLibraryProject.h
share/: CMakeLibraryProject.h
src/: CMakeLibraryProject.cpp  dllmain.cpp
